# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  configuration.toml
.github/workflows/: audit.yml  general.yml
configuration/: base.toml
migrations/: 20241017180823_create_subscriptions_table.sql
scripts/: init_db.nu  init_db.sh  init_dev_env.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
