[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Latour <g0latour@gmail.com>"]


[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
sqlx = { version = "*", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
actix-web = { version = "*" }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "*" }
