[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Latour <g0latour@gmail.com>"]


[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = { version = "*" }
sqlx = { version = "0.8.2", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
actix-web = { version = "*" }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "*" }
serde = { version = "*", features = ["derive"] }
uuid = { version = "*", features = ["v4", "serde"] }
chrono = { version = "*", default-features = false, features = ["clock"] }
tracing = { version = "*", features = ["log"] }
tracing-log = { version = "*" }
tracing-subscriber = { version = "*", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "*"
once_cell = { version = "*" }
